intervalsets-macros/tests/ui/crossed_bounds_float.stderr
error: interval bounds are crossed: 1.5 > 0.5
 --> tests/ui/crossed_bounds_float.rs:4:23
  |
4 |     let _ = interval!("[1.5, 0.5]");
  |                       ^^^^^^^^^^^^
