intervalsets-macros/tests/ui/crossed_bounds_float.rs
use intervalsets_macros::interval;

fn main() {
    let _ = interval!("[1.5, 0.5]");
}
